[package]
name = "rustapp"
version = "0.1.0"
authors = ["Parv Jhanwar <parvjhanwar@gmail.com>"]
edition = "2021"
description = "A simple command-line to-do list application written in Rust."
license = "MIT"
repository = "https://github.com/prvcds/to-do-list-CLI-rust"
keywords = ["cli", "todo", "example"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

